--- a/src/Components/Booking/Booking.css
+++ b/src/Components/Booking/Booking.css
@@ -5,6 +5,7 @@
     font-size: 0.9rem;
     border: rgba(149, 157, 165, 0.2);
     border-radius: 40px !important;
+    
 }
 .innercard1 {
     padding: 10px;
@@ -59,6 +60,15 @@
 }
 .total1 {
     margin-top: 20px;
+    justify-content:center;
+    font-size:20px;
+}
+.total1 p{
+    font-size:0.8rem;
+}
+.total1 h3{
+    font-weight:bolder;
+    margin-right:10px
 }
 .totalbtn1 {
     border-radius: 10px;
@@ -93,7 +103,13 @@
 .carDetail1 h5 {
     color: #00155a;
 }
-.carbody1 {
+.carbodes1{
+    display:flex;
+}
+.trackcheck ul{
+    padding-left:50px
+}
+.carbody1 ul {
     display: flex;
     justify-content: space-between;
 }
@@ -115,15 +131,42 @@
     margin-left: 90px;
     margin-bottom: 20px;
 }
+.thanking1{
+    display:flex;
+    justify-content:center;
+    font-size:0.8rem;
+    text-align:center;
+}
+.thanking1 p{
+    text-align:left;
+    padding:20px;
+}
+.btnalign{
+    display:flex;
+    justify-content:center;
+    margin:20px;
+}
+.modifyreview{
+    border-radius: 15px;
+    background-color: #ED7D2B;
+    width: 120px;
+    height: 40px;
+    border: none;
+    color: #fff;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
 .mahindrachoice {
     color: #00155a;
     font-size: bolder;
 }
+.sumdownload{
+    color:#ED7D2B;
+}
 textarea {
     width: 100%;
-    height: 130px;
+    height: 120px;
     padding: 12px 20px;
-
+    color:#5D6186;
     box-sizing: border-box;
     border: none;
     border-radius: 20px;
@@ -156,5 +199,16 @@ textarea {
 }
 .endthank {
     margin-top: 30px;
+    font-size:20px;
+}
+.endthank h3{
     font-weight: bolder;
+}
+.thankletter{
+    font-weight: bolder;
+    color:#fff;
+    text-decoration:none;
+}
+.thankletter:hover{
+    color:#fff;
 }
