--- a/src/Components/ProfileDasboard/dashboard.css
+++ b/src/Components/ProfileDasboard/dashboard.css
@@ -504,3 +504,33 @@
 .mgworld{
     margin-top: 70px;
 }
+.chatHead{
+    background-color:#ECEFF5;
+    display:flex;
+    justify-content:space-around;
+}
+.chatHead img{
+    width:100px;
+}
+.chatinfo{
+    line-height:0.5rem;
+    margin-right:200px;
+}
+.chatinfo h5,p{
+    color:#00155A; 
+}
+.chatHead1{
+    padding-bottom: 10px;
+    border-bottom: 2px solid #999999;
+}
+.chatHead small{
+    color:#999999;
+}
+.chatfoot i{
+   font-size:20px;
+   background-color:#4EE59D;
+   color:#fff; 
+   border-radius: 50%;
+   padding: 10px;
+   margin-left: 40px;
+}
