--- a/src/Components/TopNavbar/topnavbar.css
+++ b/src/Components/TopNavbar/topnavbar.css
@@ -7,10 +7,11 @@
 }
 .logo {
     display: flex;
+    text-decoration: none;
 }
 .logo h5 {
-    margin-top: 10px;
-    margin-left: 10px;
+    margin-top:10px;
+    margin-left: 20px;
 }
 .logo img {
     width: 40px;
@@ -19,7 +20,8 @@
 .navbar {
     display: flex;
     justify-content: space-between;
-    padding: 40px;
+    padding-left: 30px;
+    padding-right: 30px;
     color: black;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
 
