--- a/src/Components/PeriodicServices/periodic.css
+++ b/src/Components/PeriodicServices/periodic.css
@@ -47,8 +47,22 @@
 .poppins15light{
     color:#5D6186;
     font-size: 15px;
-    font-family:  'Poppins';
+    font-family:  'Poppins', sans-serif;
     margin-bottom: 0px;   
+}
+.poppins15L{
+    color:#5D6186;
+    font-size: 15px;
+    font-family:  'Poppins', sans-serif;
+    font-weight:300;
+    margin-bottom: 0px;
+   
+}
+.OpenSans22{
+    color:#00155A;
+    font-size: 22px;
+    font-family:'Open Sans', sans-serif;
+    font-weight: bold;
 }
 ul.sidebar {
     display: block;
@@ -140,7 +154,27 @@ i.fas.fa-search{
     border-radius: 10px;
     background-color:#F8F9FA;
 }
-
+.Re_SubmidBgBox{
+    width:100%;
+    height:165px;
+    border: 1px solid #EAEAEA;
+    margin: 0px 0px;
+    border-radius: 10px;
+    background-color:#F8F9FA;
+}
+.Showmore >li{
+    list-style-type: none;
+    padding: 5px 0px;
+    
+}
+.BoxWithBox{
+    width:100%;
+    height:520px;
+    border: 1px solid #EAEAEA;
+    margin: 0px 0px;
+    border-radius: 10px;
+    background-color: #fff;
+}
 
 .addcar{
     padding: 0px;
@@ -196,12 +230,11 @@ i.fas.fa-search{
 
 }
 .addbg{
-    position: relative;
     border: 1px solid #EAEAEA;
     border-radius: 7px;
     padding: 10px;
-    width:375px;
-    height:138px;
+    width:100%;
+    height:150px;
 }
 .bottomright {
     position: absolute;
@@ -240,3 +273,16 @@ i.fas.fa-search{
     font-size: 15px;
     color: #00155a !important;
 }
+.scrollbox{
+  border-radius: 5px;
+  height: 480px;
+  width: 100%;
+}
+.scrollbox::-webkit-scrollbar {
+    display: none; 
+  }
+.scrollbox{
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll; 
+  }
