--- a/src/Components/Home_Maintain/homemaintain.css
+++ b/src/Components/Home_Maintain/homemaintain.css
@@ -1,3 +1,65 @@
+.poppins30B{
+    color:#01155A;
+    font-size:30px;
+    margin-bottom: 0px;
+    font-weight:bold;
+    font-family: 'Poppins', sans-serif;
+}
+.poppins25M{
+    color:#01155A;
+    font-size:25px;
+    margin-bottom: 0px;
+    font-weight:400;
+    font-family: 'Poppins', sans-serif!important;
+}
+.poppins15L{
+    color:#5D6186;
+    font-size:15px;
+    margin-bottom: 0px;
+    font-weight:200;
+    font-family: 'Poppins', sans-serif;
+}
+.Opens20R{
+    color:#01155A;
+    font-size:20px;
+    margin-bottom: 0px;
+    font-family: 'Open Sans', sans-serif;
+}
+.poppins30Black{
+    color:#000;
+    font-size:30px;
+    margin-bottom: 0px;
+    font-weight:bold;
+    font-family: 'Poppins', sans-serif;
+}
+.ServicesOption{
+    width:400px;
+    height:300px;
+    background-color: #F8F9FA;
+    border-radius: 20px !important;
+    margin: 5px;
+    box-shadow: 0 0 5px 0 #333;
+}
+.TrendingServices{
+    list-style-type: none;
+    display: flex;
+    margin:0px;
+    padding:0px;
+}
+.ServicesScroll{
+    height: 100%;
+    padding: 0px;
+    margin:0px;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-x: scroll; 
+}
+.ServicesScroll::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+  }
+
+
+
 .row1bg{
     background-image: url("../../Images/drawable-xxxhdpi/AddLocationBG.png");
     width:582px;
@@ -63,34 +125,7 @@
     font-weight: 500 !important;
     font-family: 'Poppins', sans-serif;
 }
-i.fonticon.fas.fa-cog.i1 {
-    padding: 21px 26px;
-    background: linear-gradient(to bottom,#32FFEB,#00BCAA);
-    border-radius: 18px;
-    font-size: 35px;
-    color: #fff;
-}
-i.fonticon.far.fa-smile-beam.i2 {
-    padding: 21px 26px;
-    background: linear-gradient(to bottom,#B079FF,#5B03D8);
-    border-radius: 18px;
-    font-size: 35px;
-    color: #fff;
-}
-i.fonticon.far.fa-heart.i3 {
-    padding: 21px 26px;
-    background: linear-gradient(to bottom,#89D0FF,#0073BE);
-    border-radius: 18px;
-    font-size: 35px;
-    color: #fff;
-}
-i.fonticon.fas.fa-users.i4 {
-    padding: 21px 26px;
-    background: linear-gradient(to bottom,#FF4264,#C32E49);
-    border-radius: 18px;
-    font-size: 35px;
-    color: #fff;
-}
+
 .firsth1{
     text-align:center;
 }
