--- a/src/Components/GarageBook/LoginBook.css
+++ b/src/Components/GarageBook/LoginBook.css
@@ -1,72 +1,123 @@
+.poppins18B{
+    color:#00155A;
+    font-size: 18px;
+    font-weight:bold;
+    margin-bottom: 0px;
+    font-family: 'Poppins', sans-serif;
+}
+.poppins18RBlack{
+    color:#000;
+    font-size: 18px;
+    margin-bottom: 5px;
+    font-family: 'Poppins', sans-serif;
+}
+.poppins18W{
+    color:#fff;
+    font-size: 18px;
+    font-weight:bold;
+    margin-bottom: 0px;
+    font-family: 'Poppins', sans-serif;
+}
+.poppins22M{
+    color:#2650D8;
+    font-size: 22px;
+    font-weight:500;
+    margin-bottom: 0px;
+    font-family: 'Poppins', sans-serif;
+}
+.poppins15L{
+    color:#5D6186;
+    font-size: 15px;
+    margin: 0px;
+    font-family: 'Poppins', sans-serif;
+}
+.poppins10R{
+    color:#5D6186;
+    font-size: 11px;
+    margin: 0px;
+    font-family: 'Poppins', sans-serif;
+}
+.poppins10W{
+    color:#fff;
+    font-size: 11px;
+    margin: 0px;
+    font-family: 'Poppins', sans-serif;
+}
+.poppins15R{
+    color:#00155A;
+    font-size: 15px;
+    margin-bottom: 0px;
+    font-family: 'Poppins', sans-serif;
+}
+.poppins15r{
+    color:#606161;
+    font-size: 15px;
+    margin-bottom: 5px;
+    font-family: 'Poppins', sans-serif;
+}
+.OpenSans12R{
+    color:#5D6186;
+    font-size: 12px;
+    font-family:'Open Sans', sans-serif;
+    margin-bottom: 0px;
+}
+.OpenSans15B{
+    color:#00155A;
+    font-size: 15px;
+    font-family:'Open Sans', sans-serif;
+    font-weight: bold;
+    margin-bottom: 0px;
+}
+.OpenSans22W{
+    color:#fff;
+    font-size: 22px;
+    font-family:'Open Sans', sans-serif;
+    font-weight: bold;
+    text-align: right;
+}
+
 .loginbox1{
     border-radius: 10px;
     border:none;
     background-color: #EAEAEA;
 }
+.Accountbox{
+    width:100%;
+    height:170px;
+    border:1px solid #000;
+}
+.accountbg{
+    border-radius: 10px;
+    border:none;
+    width:100%;
+    height:100%;
+    background-color: #F8F9FA;
+}
+.accounticon{
+    position: relative;
+    left: 25px;
+    top:15px;
+}
 
-i.fas.fa-map-marker-alt.location{
-    position: absolute;
-  top: calc(58% - 35px);
-  left: 30px;
-  width: 50px;
-  height: 50px;
-  border: 1px solid #FFF;
-  border-radius: 50%;
-  background-color:#2650D8;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 30px;
-  color: #FFFFFF;
-
-}
-i.far.fa-credit-card{
-    position: absolute;
-    top: calc(75% - 35px);
-    left: 30px;
-    width: 50px;
-    height: 50px;
-    border: 1px solid #FFF;
-    border-radius: 50%;
-    background-color:#2650D8;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 30px;
-    color: #FFFFFF;
-    
-}
-i.fas.fa-stopwatch.stop{
-    position: absolute;
-  top: calc(50% - 90px);
-  left: 30px;
-  width: 50px;
-  height: 50px;
-  border: 1px solid #FFF;
-  border-radius: 50%;
-  background-color:#2650D8;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 30px;
-  color: #FFFFFF;
-}
 .bookinghead1{
     font-size: 25px;
-    font-weight: bolder;
+    font-weight: bold;
     color:#00155A;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
+    font-family: 'Poppins', sans-serif;
 }
 .bookingpara{
-    font-size: 16px;
-    color:grey;
+    font-size: 18px;
+    color:#5D6186;
+    margin-bottom: 0px;
+    font-family: 'Poppins', sans-serif;    
 }
 input.phoneinput {
     border: none;
     margin: 5px;
     width: 250px;
     height: 40px;
-    box-shadow: 0 0 10px 0 #00000059;
+    box-shadow: 0 0 5px 0 #00000059;
 }
 button.submitphone {
     width: 100px;
@@ -79,3 +130,13 @@ button.submitphone {
     border-radius: 5px;
     font-weight: 500;
 }
+.scrollboxservices{
+    width:100%;
+    height:400px;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll; 
+}
+.scrollboxservices::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+  }
