Add floder Garage Verification ,Home Challan and Home Fastag

--- a/src/Components/GarageBook/address.css
+++ b/src/Components/GarageBook/address.css
@@ -73,6 +73,6 @@ button.submitpayment {
     border-radius: 10px;
     height: 50px;
     color: #fff;
-    background-color: blue;
+    background-color: #2650D8;
     margin-left: 60px;
 }
