--- a/src/Components/HomeFastag/HomeFasTag.css
+++ b/src/Components/HomeFastag/HomeFasTag.css
@@ -87,19 +87,19 @@
     display: none; /* for Chrome, Safari, and Opera */
   }
 .yellowcard{
-    background-image: url('./Images/YellowShade.png');
+    background-image: url('../../Images/YellowShade.png');
     width:400px;
     height:100%;
     border-radius:20px;
 } 
 .greycard{
-    background-image: url('./Images/GreyShade.png');
+    background-image: url('../../Images/GreyShade.png');
     width:400px;
     height:218px;
     border-radius:20px;
 }
 .bluecard{
-    background-image: url('./Images/BlueShade.png');
+    background-image: url('../../Images/BlueShade.png');
     width:400px;
     height:218px;
     border-radius:20px;
