--- a/src/Components/HomeFastag/RechargeFastag1.css
+++ b/src/Components/HomeFastag/RechargeFastag1.css
@@ -154,6 +154,7 @@
     background-color: #53BD8C;
     color: #fff;
     text-align: center;
+    width:100%;
     height: 84px;
     bottom: 0;
     margin: 0;
@@ -162,11 +163,12 @@
 .BottomBG{
     background-color: #2650D8;
     color: #fff;
-    text-align: center;
+    /*  text-align: center; */
     height: 84px;
+    width:100%;
     bottom: 0;
-    margin: 0;
-    border-radius: 0px 0px 20px 20px;
+    margin:0;
+    border-radius: 0px 0px 25px 25px;
 }
 .SelectPayment{
     width:212px;
