--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -2,161 +2,148 @@
 * {
     font-family: "Poppins";
 }
-.hello{
-    display:flex;
-    justify-content:space-between;
-    margin-top:25px;
-    margin-bottom:30px;
+.hello {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 25px;
+    margin-bottom: 30px;
 }
 .hello h3 {
-    color:#00155A;
-    font-weight:bolder;
+    color: #00155a;
+    font-weight: bolder;
 }
-.hello i{
-    color:#D8D8D8;
-    font-weight:bolder;
-    font-size:20px;
+.hello i {
+    color: #d8d8d8;
+    font-weight: bolder;
+    font-size: 20px;
 }
-.profilename{
-    display:flex;
-    justify-content:space-between;
-    color:#00155A;
-    font-weight:bolder;
+.profilename {
+    display: flex;
+    justify-content: space-between;
+    color: #00155a;
+    font-weight: bolder;
 }
-.profilename p{
-    color:#2650D8;
+.profilename p {
+    color: #2650d8;
 }
 .hello h5 {
+    color: #00155a;
+}
+.card1 {
+    float: right;
 
-    color:#00155A;
+    width: 490px;
+    height: 768px;
 }
-.card1{
-    float:right;
-    position:absolute;
-    width:490px;
-    height:768px;
-    transition:all 1s;
-
+.addmorecard {
+    font-size: 29px;
+    margin-left: 20px;
 }
-.addmorecard{
-    font-size:29px;
-    margin-left:20px;
+.addcardalign i {
+    margin-right: 20px;
 }
-.addcardalign i{
-    margin-right:20px
-}
-.login{
-    background-color:#F4F8FF;
-   
-    font-size:0.8rem;
-    padding:20px;
+.login {
+    background-color: #f4f8ff;
     
+    font-size: 0.8rem;
+    padding: 20px;
 }
-.headerProfile{
-    display:flex;
-    justify-content:space-evenly;
-    padding-bottom:10px;
-    border-bottom:1px solid #D8D8D8;
-
+.headerProfile {
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #d8d8d8;
 }
-.headerProfile img{
-    width:80px
+.headerProfile img {
+    width: 80px;
 }
-.logindetail{
-    margin-left:10px;
-    line-height:0.8rem
+.logindetail {
+    margin-left: 10px;
+    line-height: 0.8rem;
 }
-.logindetail1{
-    margin-left:10px;
-    line-height:0.8rem
+.logindetail1 {
+    margin-left: 10px;
+    line-height: 0.8rem;
 }
-.logindetail1 h3{
-    color:#00155A;
-    font-weight:bolder;
+.logindetail1 h3 {
+    color: #00155a;
+    font-weight: bolder;
 }
-.logindetail1 p{
-    color:#2650D8;
+.logindetail1 p {
+    color: #2650d8;
 }
-.logindetail button{
-    margin-bottom:20px;
+.logindetail button {
+    margin-bottom: 20px;
 }
 .Login {
     border-radius: 15px;
-    background-color: #2650D8;
+    background-color: #2650d8;
     width: 120px;
     height: 40px;
     border: none;
     color: #fff;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
-.supportprofile{
-    border-bottom:1px solid #D8D8D8;
+.supportprofile {
+    border-bottom: 1px solid #d8d8d8;
 }
-.supportprofile img{
-    width:32px;
-    height:32px;
+.supportprofile img {
+    width: 32px;
+    height: 32px;
 }
-.supportprofile li{
-    display:flex;
-    margin-left:40px;
-    margin-bottom:20px;
- 
-
+.supportprofile li {
+    display: flex;
+    margin-left: 40px;
+    margin-bottom: 20px;
 }
-.supportprofile p{
-    margin-left:25px;
-    margin-top:5px;
-    text-align:left;
-    color:#00155A
+.supportprofile p {
+    margin-left: 25px;
+    margin-top: 5px;
+    text-align: left;
+    color: #00155a;
 }
-.social_icon{
-   display:flex;
-   justify-content:center;
-   padding-right:30px;
-   padding-bottom:30px;
-   border-bottom:1px solid #D8D8D8;
+.social_icon {
+    display: flex;
+    justify-content: center;
+    padding-right: 30px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #d8d8d8;
 }
 
-.social_icon li{
-    margin-left:30px;
-   
+.social_icon li {
+    margin-left: 30px;
 }
-.social_icon li i{
-    font-size:19px;
-    color:#5D6186;
+.social_icon li i {
+    font-size: 19px;
+    color: #5d6186;
 }
-.social_icons{
-    display:flex;
-    justify-content:center;
-    padding-right:30px;
-    padding-bottom:30px;
-    
- }
-.social_icons li{
-    margin-left:30px;
-   
+.social_icons {
+    display: flex;
+    justify-content: center;
+    padding-right: 30px;
+    padding-bottom: 30px;
 }
-.social_icons li i{
-    font-size:19px;
-    color:#5D6186;
+.social_icons li {
+    margin-left: 30px;
 }
-.tearmcondition{
-    display:flex;
-    justify-content:center;
-    margin:70px
-   
+.social_icons li i {
+    font-size: 19px;
+    color: #5d6186;
 }
-.tearmcondition  p{
-   
-    color:#D8D8D8;
-
+.tearmcondition {
+    display: flex;
+    justify-content: center;
+    margin: 70px;
 }
-.tearm{
-    text-decoration:none;
+.tearmcondition p {
+    color: #d8d8d8;
 }
-.tearm p{
-    margin-right:10px;
+.tearm {
+    text-decoration: none;
 }
-.tearms{
-    margin-right:10px;
+.tearm p {
+    margin-right: 10px;
+}
+.tearms {
+    margin-right: 10px;
 }
