--- a/src/Components/TopNavbar/topnavbar.css
+++ b/src/Components/TopNavbar/topnavbar.css
@@ -46,7 +46,9 @@
     background-color: #2650d8;
     border-radius: 50%;
     color: #fff !important;
-    padding: 10px
+    padding: 7px 10px ;
+    height:30px !important;
+    width:30px !important;
 }
 .icons1 ul li a img {
     box-shadow: 5px 10px #fff;
