--- a/src/Components/ProfileDasboard/dashboard.css
+++ b/src/Components/ProfileDasboard/dashboard.css
@@ -169,7 +169,7 @@
 .tencoins{
     display:flex;
     justify-content:center;
-    color:#fff;
+    color:#fff !important;
     font-weight: bolder;
 }
 .someinfo{
@@ -183,17 +183,21 @@
     color:#00155A;
 }
 
+
 .containlast{
     display:flex;
     justify-content:center;
-    margin-top:40px;
+    color:#fff !important;
+    margin-top:-30px;
+}
+.coincolor p{
+    color:#fff !important;
 }
 .containlast1{
     display:flex;
 }
 .containlast1 i{
     
-    margin-left:10px;
     background-color:#fff;
     width:35px;
     height:35px;
